# tp-final-nlp

./: .env.example  .gitignore  EVALUATION_05B.md  README.md  probar_modelo.py  probar_modelo_4b_stateful.py  pyproject.toml  requirements.txt
configs/: qwen2_5_05b_qlora.yaml  qwen3_4b_qlora.yaml
data/evaluation/: adversarial_prompts.jsonl  campaigns_50turn.jsonl  modern_terms.txt
data/steering/: contrast_pairs.jsonl
ollama/: Modelfile.template
scripts/: export_to_ollama.sh  run_05b_overnight.sh  run_4b_metrics.sh  train.sh  train_05b.sh
src/fireball_narrator/: __init__.py  config.py  decoding.py  modeling.py
src/fireball_narrator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fireball_narrator/compression/: __init__.py  caveman.py
src/fireball_narrator/data/: __init__.py  formatting.py  prepare_fireball.py
src/fireball_narrator/evaluation/: __init__.py  build_adversarial_set.py  evaluate_adversarial.py  evaluate_retention.py  metrics.py
src/fireball_narrator/steering/: __init__.py  build_vector.py  generate.py  inspect_layers.py  runtime.py
src/fireball_narrator/training/: __init__.py  merge_adapter.py  train_qlora.py
tests/: test_compression.py  test_decoding.py  test_formatting.py  test_metrics.py  test_retention.py
