[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fireball-narrator"
version = "0.1.0"
description = "FIREBALL QLoRA, activation steering and history compression pipeline."
requires-python = ">=3.10,<3.13"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

